[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/player/player.gd" type="Script" id=2]
[ext_resource path="res://entities/player/camera.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/28693__infobandit__sonar.wav" type="AudioStream" id=4]
[ext_resource path="res://entities/player/submarine_interior.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape" id=1]
height = 9.0

[sub_resource type="SphereShape" id=2]
radius = 50.0

[node name="Player" type="RigidBody"]
gravity_scale = 0.0
axis_lock_angular_x = true
axis_lock_angular_z = true
linear_damp = 1.0
angular_damp = 10.0
script = ExtResource( 2 )
sonar_time = 0.5
sonar_cooldown = 5.0

[node name="Camera" type="Camera" parent="."]
current = true
far = 500.0
script = ExtResource( 3 )

[node name="submarine_interior" parent="." instance=ExtResource( 5 )]
disabled = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00617123, -0.0105028, 4.35129 )
shape = SubResource( 1 )

[node name="Sonar" type="Area" parent="." groups=[
"sonar",
]]
collision_layer = 512
collision_mask = 512

[node name="Active" type="CollisionShape" parent="Sonar"]
shape = SubResource( 2 )
disabled = true

[node name="SonarPing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="area_entered" from="Sonar" to="." method="_on_Sonar_area_entered"]
